--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@epicbp2020/cloud-sdk-normalizr",
+  "name": "cloud-sdk-normalizr",
   "version": "1.0.1",
   "description": "Create a normalizr schema from SAP Cloud SDK Entities",
   "main": "dist/index.js",
