--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "module": "index.ts",
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/gitlab": "^6.2.1",
     "@semantic-release/npm": "^7.1.3",
