Add Coverage to Pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,14 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - name: Run Tests
-        run: yarn test
+        run: yarn coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./coverage/
+          verbose: true
+
   release:
     # Only release on push to master
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
