feat: Refactoring of the Generator

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@sap-cloud-sdk/core": "^1.45.0",
+    "@sap-cloud-sdk/util": "^1.46.0",
     "@types/node": "^15.12.4",
     "@types/object-path": "^0.11.0",
     "normalizr": "^3.6.1"
@@ -64,5 +65,6 @@
   },
   "files": [
     "dist/**/*"
-  ]
+  ],
+  "repository": "git@github.com:sinnaj-r/cloud-sdk-normalizr.git"
 }
