fix: cloud sdk version

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@sap-cloud-sdk/core": "^1.45.0",
-    "@sap-cloud-sdk/util": "^1.46.0",
+    "@sap-cloud-sdk/core": "=1.46.0",
+    "@sap-cloud-sdk/util": "=1.46.0",
     "@types/node": "^15.12.4",
     "@types/object-path": "^0.11.0",
     "normalizr": "^3.6.1"
